syntax="proto3";
package lms.v1beta1;
option go_package="x/lms/types";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
service Msg {
    // RegisterAdmin adds a new admin
    rpc MsgRegisterAdmin(MsgRegisterAdminRequest) returns (MsgRegisterAdminResponse) {};
    
    // AddStudent adds new student
    rpc MsgAddStudent(MsgAddStudentRequest) returns (MsgAddStudentResponse) {};
    
    // ApplyLeave request a new leave
    rpc MsgApplyLeave(MsgApplyLeaveRequest) returns (MsgApplyLeaveResponse) {};
    
    // AcceptLeave accept or reject a leave
    rpc MsgAcceptLeave(MsgAcceptLeaveRequest) returns (MsgAcceptLeaveResponse) {};
}

message MsgRegisterAdminRequest {
    // address is the account address of the admin.
    string address = 1;
    
    // name is the admin name
    string name = 2;

    string signerAddress = 3;
}

message MsgRegisterAdminResponse{}

message MsgAddStudentRequest {
    // admin is the account address of the admin
    string admin = 1;
    
    // students is the list of Student.
    repeated Student students = 2;

    string signerAddress = 3;
}

message MsgAddStudentResponse{}

message MsgApplyLeaveRequest {
    
    string address = 1;
    
    string reason = 2;
    
    google.protobuf.Timestamp from = 3 [(gogoproto.stdtime)=true,(gogoproto.nullable)=true ];
     
    google.protobuf.Timestamp to = 4 [(gogoproto.stdtime)=true,(gogoproto.nullable)=true ];

    string signerAddress = 5;
}

message MsgApplyLeaveResponse {

}

enum LeaveStatus {
    STATUS_UNDEFINED = 0;
    
    STATUS_ACCEPTED = 1;
    
    STATUS_REJECTED = 2;
}

message MsgAcceptLeaveRequest {

    string admin = 1;
    
    // using it as student id, will accept his latest leave request if any
    string student = 2;


    LeaveStatus status = 3;

    string signerAddress = 4;
    
    bool accept = 5;
}

message MsgAcceptLeaveResponse {

}
message Student {
    // address is the account address of the student.
    string address = 1;
    
    // name is the student name.
    string name = 2;
    
    // id is a unique student id.
    string id = 3;
}